--- a/index.html
+++ b/index.html
@@ -31,6 +31,30 @@
 
 
     <link rel="icon" href="images/icons/rings.png">
+    <style>
+        .modal {
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            background: #eae0d8;
+            text-align: center;
+            padding: 2em;
+        }
+
+        .hide {
+            display: none;
+        }
+
+        .modal-container {
+            position: fixed;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100vh;
+            background: rgba(0, 0, 0, 0.5);
+        }
+    </style>
 </head>
 
 <body>
