--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
 <script>
     function play() {
-        let audio = new Audio("https://ainaafahmee.kahwin.me/ainaa_song.mp3");
+        let audio = new Audio("https://kadkawenainaa.herokuapp.com/ainaa_song.mp3");
         audio.play();
     }
     function hideModal() {
