--- a/index.html
+++ b/index.html
@@ -68,9 +68,10 @@
     <div class="main_frame">
         <iframe src="home.html" style="width:100vw;height:100vh" class="size_frame"></iframe>
     </div>
-    <div class="modal-container" id="modal-covid" onclick="hideModal();">
+    <div class="modal-container" id="modal-covid" onclick="hideModal();" onscroll="hideModal();">
     </div>
-    <!-- <script src="nicescroll.js"></script> -->
+    <!-- <script src=" nicescroll.js">
+        </script> -->
 
 </body>
 
