--- a/home.html
+++ b/home.html
@@ -36,9 +36,8 @@
         <!--============END TIMER================-->
     </div>
     <!-- toolbar bottom -->
-    <div class="toolbar">
-        <!-- <div class="container"> -->
-        <ul class="toolbar-bottom toolbar-wrap">
+    <div class="toolbar toolbar-bottom toolbar-wrap">
+        <ul>
 
             <li class="toolbar-item">
                 <button type="button" class="toolbar-link text-light" data-toggle="modal" data-target="#ModalRSVP">
@@ -60,7 +59,6 @@
                 </button>
             </li>
         </ul>
-        <!-- </div> -->
     </div>
     <!-- end toolbar bottom -->
 
