--- a/home.html
+++ b/home.html
@@ -34,34 +34,35 @@
 
         </div>
         <!--============END TIMER================-->
+
+        <!-- toolbar bottom -->
+        <div class="toolbar toolbar-bottom toolbar-wrap">
+            <ul>
+
+                <li class="toolbar-item">
+                    <button type="button" class="toolbar-link text-light" data-toggle="modal" data-target="#ModalRSVP">
+                        <i class="fas fa-envelope-open fa-2x"></i>
+                        RSVP
+                    </button>
+                </li>
+
+                <li class="toolbar-item">
+                    <button type="button" class="toolbar-link text-light" data-toggle="modal"
+                        data-target="#ModalContact">
+                        <i class="fas fa-phone fa-2x"></i>
+                        CONTACT
+                    </button>
+                </li>
+                <li class="toolbar-item">
+                    <button type="button" class="toolbar-link text-light" data-toggle="modal" data-target="#ModalMap">
+                        <i class="fas fa-map-marked-alt fa-2x"></i>
+                        LOCATION
+                    </button>
+                </li>
+            </ul>
+        </div>
+        <!-- end toolbar bottom -->
     </div>
-    <!-- toolbar bottom -->
-    <div class="toolbar toolbar-bottom toolbar-wrap">
-        <ul>
-
-            <li class="toolbar-item">
-                <button type="button" class="toolbar-link text-light" data-toggle="modal" data-target="#ModalRSVP">
-                    <i class="fas fa-envelope-open fa-2x"></i>
-                    RSVP
-                </button>
-            </li>
-
-            <li class="toolbar-item">
-                <button type="button" class="toolbar-link text-light" data-toggle="modal" data-target="#ModalContact">
-                    <i class="fas fa-phone fa-2x"></i>
-                    CONTACT
-                </button>
-            </li>
-            <li class="toolbar-item">
-                <button type="button" class="toolbar-link text-light" data-toggle="modal" data-target="#ModalMap">
-                    <i class="fas fa-map-marked-alt fa-2x"></i>
-                    LOCATION
-                </button>
-            </li>
-        </ul>
-    </div>
-    <!-- end toolbar bottom -->
-
     <!--=========================================START MODAL RSVP==================================================-->
 
     <div class="modal fade" id="ModalRSVP" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle"
