--- a/home.html
+++ b/home.html
@@ -151,7 +151,7 @@
                             </a>
                         </div>
                         <div class="griditem">
-                            <a href="https://wa.link/thocm5" target="_blank">
+                            <a href="https://wa.link/uaheke" target="_blank">
                                 <img src="images/icons/whatsapp.png" alt="" width="50%">
                             </a>
                         </div>
@@ -166,7 +166,7 @@
                             </a>
                         </div>
                         <div class="griditem">
-                            <a href="https://wa.link/zbjwt2" target="_blank">
+                            <a href="https://wa.link/5p06ep" target="_blank">
                                 <img src="images/icons/whatsapp.png" alt="" width="50%">
                             </a>
                         </div>
@@ -181,7 +181,7 @@
                             </a>
                         </div>
                         <div class="griditem">
-                            <a href="https://wa.link/js9zsu" target="_blank">
+                            <a href="https://wa.link/ib1jvf" target="_blank">
                                 <img src="images/icons/whatsapp.png" alt="" width="50%">
                             </a>
                         </div>
