--- a/home.html
+++ b/home.html
@@ -211,14 +211,19 @@
                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3983.967411802195!2d101.54450061110386!3d3.103314653418502!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31cc4d18b837a5e3%3A0x5ed62ba7ee74b45!2sCalandra%20D%E2%80%99Astaka%20Jelutong!5e0!3m2!1sen!2smy!4v1668177855748!5m2!1sen!2smy"
                         width="100%" height="250" frameborder="0" style="border:0;" allowfullscreen="" loading="lazy"
                         referrerpolicy="no-referrer-when-downgrade"></iframe>
-                    <!-- 
-                    <div class="gridcontainer2"> -->
-                    <div class="center">
-                        <a href="https://waze.com/ul/hw284xzg80" target="_blank">
-                            <img src="images/button/waze.svg" alt="" width="150px"><br>
-                        </a>
+
+                    <div class="gridcontainer2">
+                        <div class="griditem2">
+                            <a href="https://waze.com/ul/hw281wubq4" target="_blank">
+                                <img src="images/button/waze.svg" alt="" width="150px"><br>
+                            </a>
+                        </div>
+                        <div class="griditem2">
+                            <a href="https://goo.gl/maps/Py7n9zhYE5EYSaMt5" target="_blank">
+                                <img src="images/button/googlemap.svg" alt="" width="150px"> <br>
+                            </a>
+                        </div>
                     </div>
-                    <!-- </div> -->
                 </div>
             </div>
         </div>
