--- a/home.html
+++ b/home.html
@@ -41,9 +41,25 @@
 
 <body>
     <div class="navbar">
-        <a href="#home">Home</a>
-        <a href="#news">News</a>
-        <a href="#contact">Contact</a>
+        <a class="toolbar-item">
+            <button type="button" class="toolbar-link text-light" data-toggle="modal" data-target="#ModalRSVP">
+                <i class="fas fa-envelope-open fa-2x"></i>
+                RSVP
+            </button>
+        </a>
+
+        <a class="toolbar-item">
+            <button type="button" class="toolbar-link text-light" data-toggle="modal" data-target="#ModalContact">
+                <i class="fas fa-phone fa-2x"></i>
+                CONTACT
+            </button>
+        </a>
+        <a class="toolbar-item">
+            <button type="button" class="toolbar-link text-light" data-toggle="modal" data-target="#ModalMap">
+                <i class="fas fa-map-marked-alt fa-2x"></i>
+                LOCATION
+            </button>
+        </a>
     </div>
     <div class="page-content-scroll">
         <div class="cover-class cover-bg-1">
@@ -69,25 +85,25 @@
     <div class="toolbar">
         <ul class="toolbar-bottom toolbar-wrap">
 
-            <li class="toolbar-item">
+            <a class="toolbar-item">
                 <button type="button" class="toolbar-link text-light" data-toggle="modal" data-target="#ModalRSVP">
                     <i class="fas fa-envelope-open fa-2x"></i>
                     RSVP
                 </button>
-            </li>
+            </a>
 
-            <li class="toolbar-item">
+            <a class="toolbar-item">
                 <button type="button" class="toolbar-link text-light" data-toggle="modal" data-target="#ModalContact">
                     <i class="fas fa-phone fa-2x"></i>
                     CONTACT
                 </button>
-            </li>
-            <li class="toolbar-item">
+            </a>
+            <a class="toolbar-item">
                 <button type="button" class="toolbar-link text-light" data-toggle="modal" data-target="#ModalMap">
                     <i class="fas fa-map-marked-alt fa-2x"></i>
                     LOCATION
                 </button>
-            </li>
+            </a>
         </ul>
     </div>
     <!-- end toolbar bottom -->
