--- a/home.html
+++ b/home.html
@@ -17,7 +17,7 @@
             overflow: hidden;
             background-color: #333;
             position: fixed;
-            top: 0;
+            bottom: 0;
             width: 100%;
         }
 
@@ -40,27 +40,7 @@
 </head>
 
 <body>
-    <div class="navbar">
-        <a class="toolbar-item">
-            <button type="button" class="toolbar-link text-light" data-toggle="modal" data-target="#ModalRSVP">
-                <i class="fas fa-envelope-open fa-2x"></i>
-                RSVP
-            </button>
-        </a>
 
-        <a class="toolbar-item">
-            <button type="button" class="toolbar-link text-light" data-toggle="modal" data-target="#ModalContact">
-                <i class="fas fa-phone fa-2x"></i>
-                CONTACT
-            </button>
-        </a>
-        <a class="toolbar-item">
-            <button type="button" class="toolbar-link text-light" data-toggle="modal" data-target="#ModalMap">
-                <i class="fas fa-map-marked-alt fa-2x"></i>
-                LOCATION
-            </button>
-        </a>
-    </div>
     <div class="page-content-scroll">
         <div class="cover-class cover-bg-1">
         </div>
@@ -82,29 +62,10 @@
         <!--============END TIMER================-->
     </div>
     <!-- toolbar bottom -->
-    <div class="toolbar">
-        <ul class="toolbar-bottom toolbar-wrap">
-
-            <a class="toolbar-item">
-                <button type="button" class="toolbar-link text-light" data-toggle="modal" data-target="#ModalRSVP">
-                    <i class="fas fa-envelope-open fa-2x"></i>
-                    RSVP
-                </button>
-            </a>
-
-            <a class="toolbar-item">
-                <button type="button" class="toolbar-link text-light" data-toggle="modal" data-target="#ModalContact">
-                    <i class="fas fa-phone fa-2x"></i>
-                    CONTACT
-                </button>
-            </a>
-            <a class="toolbar-item">
-                <button type="button" class="toolbar-link text-light" data-toggle="modal" data-target="#ModalMap">
-                    <i class="fas fa-map-marked-alt fa-2x"></i>
-                    LOCATION
-                </button>
-            </a>
-        </ul>
+    <div class="navbar">
+        <a href="#home">RSVP</a>
+        <a href="#news">CONTACT</a>
+        <a href="#contact">LOCATION</a>
     </div>
     <!-- end toolbar bottom -->
 
