--- a/home.html
+++ b/home.html
@@ -63,9 +63,12 @@
     </div>
     <!-- toolbar bottom -->
     <div class="navbar">
-        <a href="#home">RSVP</a>
-        <a href="#news">CONTACT</a>
-        <a href="#contact">LOCATION</a>
+        <a href="#home" data-toggle="modal" data-target="#ModalRSVP"><i
+                class="fas fa-envelope-open fa-2x"></i><br>RSVP</a>
+        <a href="#news" data-toggle="modal" data-target="#ModalContact"><i
+                class="fas fa-phone fa-2x"></i><br>CONTACT</a>
+        <a href="#contact" data-toggle="modal" data-target="#ModalMap"><i class="fas fa-map-marked-alt fa-2x"></i><br>
+            LOCATION</a>
     </div>
     <!-- end toolbar bottom -->
 
