--- a/home.html
+++ b/home.html
@@ -63,6 +63,9 @@
     </div>
     <!-- toolbar bottom -->
     <div class="navbar">
+
+        <a data-target="#myModal" data-toggle="modal" class="MainNavText" id="MainNavHelp" href="#myModal">HELP</a>
+
         <a href="#home" data-toggle="modal" data-target="#ModalRSVP"><i
                 class="fas fa-envelope-open fa-2x"></i><br>RSVP</a>
         <a href="#news" data-toggle="modal" data-target="#ModalContact"><i
