--- a/home.html
+++ b/home.html
@@ -64,13 +64,11 @@
     <!-- toolbar bottom -->
     <div class="navbar">
 
-        <a data-target="#myModal" data-toggle="modal" class="MainNavText" id="MainNavHelp" href="#myModal">HELP</a>
-
-        <a href="#home" data-toggle="modal" data-target="#ModalRSVP"><i
+        <a href="##ModalRSVP" data-toggle="modal" data-target="#ModalRSVP"><i
                 class="fas fa-envelope-open fa-2x"></i><br>RSVP</a>
-        <a href="#news" data-toggle="modal" data-target="#ModalContact"><i
+        <a href="#ModalContact" data-toggle="modal" data-target="#ModalContact"><i
                 class="fas fa-phone fa-2x"></i><br>CONTACT</a>
-        <a href="#contact" data-toggle="modal" data-target="#ModalMap"><i class="fas fa-map-marked-alt fa-2x"></i><br>
+        <a href="#ModalMap" data-toggle="modal" data-target="#ModalMap"><i class="fas fa-map-marked-alt fa-2x"></i><br>
             LOCATION</a>
     </div>
     <!-- end toolbar bottom -->
