--- a/home.html
+++ b/home.html
@@ -62,15 +62,29 @@
         <!--============END TIMER================-->
     </div>
     <!-- toolbar bottom -->
-    <div class="navbar">
-
-        <a href="##ModalRSVP" data-toggle="modal" data-target="#ModalRSVP"><i
-                class="fas fa-envelope-open fa-2x"></i><br>RSVP</a>
-        <a href="#ModalContact" data-toggle="modal" data-target="#ModalContact"><i
-                class="fas fa-phone fa-2x"></i><br>CONTACT</a>
-        <a href="#ModalMap" data-toggle="modal" data-target="#ModalMap"><i class="fas fa-map-marked-alt fa-2x"></i><br>
-            LOCATION</a>
+    <div class="toolbar">
+        <ul class="toolbar-bottom toolbar-wrap">
+            <li class="toolbar-item">
+                <button type="button" class="toolbar-link text-light" data-toggle="modal" data-target="#ModalRSVP">
+                    <i class="fas fa-envelope-open fa-2x"></i>
+                    RSVP
+                </button>
+            </li>
+            <li class="toolbar-item">
+                <button type="button" class="toolbar-link text-light" data-toggle="modal" data-target="#ModalContact">
+                    <i class="fas fa-phone fa-2x"></i>
+                    CONTACT
+                </button>
+            </li>
+            <li class="toolbar-item">
+                <button type="button" class="toolbar-link text-light" data-toggle="modal" data-target="#ModalMap">
+                    <i class="fas fa-map-marked-alt fa-2x"></i>
+                    LOCATION
+                </button>
+            </li>
+        </ul>
     </div>
+
     <!-- end toolbar bottom -->
 
     <!--=========================================START MODAL RSVP==================================================-->
