--- a/home.html
+++ b/home.html
@@ -12,10 +12,40 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
+    <style>
+        .navbar {
+            overflow: hidden;
+            background-color: #333;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+        }
+
+        .navbar a {
+            float: left;
+            display: block;
+            color: #f2f2f2;
+            text-align: center;
+            /* padding: 14px 16px; */
+            text-decoration: none;
+            font-size: 17px;
+        }
+
+        .navbar a:hover {
+            background: #ddd;
+            color: black;
+        }
+    </style>
 </head>
 
 <body>
 
+    <div class="navbar">
+        <a href="#ModalRSVP"><i class="fas fa-envelope-open fa-2x"></i><br>RSVP</a>
+        <a href="#ModalContact"><i class="fas fa-phone fa-2x"></i><br>CONTACT</a>
+        <a href="#ModalMap"><i class="fas fa-map-marked-alt fa-2x"></i><br>
+            LOCATION</a>
+    </div>
     <div class="page-content-scroll">
         <div class="cover-class cover-bg-1">
         </div>
@@ -37,28 +67,6 @@
         <!--============END TIMER================-->
     </div>
     <!-- toolbar bottom -->
-    <div class="toolbar">
-        <ul class="toolbar-bottom toolbar-wrap">
-            <li class="toolbar-item">
-                <button type="button" class="toolbar-link text-light" data-toggle="modal" data-target="#ModalRSVP">
-                    <i class="fas fa-envelope-open fa-2x"></i>
-                    RSVP
-                </button>
-            </li>
-            <li class="toolbar-item">
-                <button type="button" class="toolbar-link text-light" data-toggle="modal" data-target="#ModalContact">
-                    <i class="fas fa-phone fa-2x"></i>
-                    CONTACT
-                </button>
-            </li>
-            <li class="toolbar-item">
-                <button type="button" class="toolbar-link text-light" data-toggle="modal" data-target="#ModalMap">
-                    <i class="fas fa-map-marked-alt fa-2x"></i>
-                    LOCATION
-                </button>
-            </li>
-        </ul>
-    </div>
 
     <!-- end toolbar bottom -->
 
