--- a/home.html
+++ b/home.html
@@ -41,10 +41,9 @@
 <body>
 
     <div class="navbar">
-        <a href="#ModalRSVP"><i class="fas fa-envelope-open fa-2x"></i><br>RSVP</a>
-        <a href="#ModalContact"><i class="fas fa-phone fa-2x"></i><br>CONTACT</a>
-        <a href="#ModalMap"><i class="fas fa-map-marked-alt fa-2x"></i><br>
-            LOCATION</a>
+        <a href="#ModalRSVP">RSVP</a>
+        <a href="#ModalContact">CONTACT</a>
+        <a href="#ModalMap">LOCATION</a>
     </div>
     <div class="page-content-scroll">
         <div class="cover-class cover-bg-1">
