--- a/home.html
+++ b/home.html
@@ -39,12 +39,6 @@
 </head>
 
 <body>
-
-    <div class="navbar">
-        <a href="#ModalRSVP">RSVP</a>
-        <a href="#ModalContact">CONTACT</a>
-        <a href="#ModalMap">LOCATION</a>
-    </div>
     <div class="page-content-scroll">
         <div class="cover-class cover-bg-1">
         </div>
@@ -66,7 +60,28 @@
         <!--============END TIMER================-->
     </div>
     <!-- toolbar bottom -->
-
+    <nav class="toolbar">
+        <ul class="toolbar-bottom toolbar-wrap">
+            <li class="toolbar-item">
+                <button type="button" class="toolbar-link text-light" data-toggle="modal" data-target="#ModalRSVP">
+                    <i class="fas fa-envelope-open fa-2x"></i>
+                    RSVP
+                </button>
+            </li>
+            <li class="toolbar-item">
+                <button type="button" class="toolbar-link text-light" data-toggle="modal" data-target="#ModalContact">
+                    <i class="fas fa-phone fa-2x"></i>
+                    CONTACT
+                </button>
+            </li>
+            <li class="toolbar-item">
+                <button type="button" class="toolbar-link text-light" data-toggle="modal" data-target="#ModalMap">
+                    <i class="fas fa-map-marked-alt fa-2x"></i>
+                    LOCATION
+                </button>
+            </li>
+        </ul>
+    </nav>
     <!-- end toolbar bottom -->
 
     <!--=========================================START MODAL RSVP==================================================-->
