--- a/home.html
+++ b/home.html
@@ -7,27 +7,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="home.css">
     <script src="https://kit.fontawesome.com/a165d3b8d1.js" crossorigin="anonymous"></script>
-
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-
-
-</head>
-
-
 </head>
 
 <body>
-
-
-
     <div class="page-content-scroll">
         <div class="cover-class cover-bg-1">
         </div>
         <div class="cover-class2 cover-bg-2">
         </div>
-
         <!-- ============ START TIMER ================ -->
         <div class="timer-countdown cover-class3">
             <div class="outside">
@@ -38,12 +28,11 @@
                     </div>
                 </div>
             </div>
-
         </div>
         <!--============END TIMER================-->
     </div>
     <!-- toolbar bottom -->
-    <div class="toolbar">
+    <nav class="toolbar">
         <ul class="toolbar-bottom toolbar-wrap">
             <li class="toolbar-item">
                 <button type="button" class="toolbar-link text-light" data-toggle="modal" data-target="#ModalRSVP">
@@ -63,7 +52,7 @@
                     LOCATION
                 </button>
             </li>
-        </ul>
+    </nav>
     </div>
     <!-- end toolbar bottom -->
 
