--- a/home.html
+++ b/home.html
@@ -32,7 +32,7 @@
         <!--============END TIMER================-->
     </div>
     <!-- toolbar bottom -->
-    <nav class="toolbar">
+    <div class="toolbar">
         <ul class="toolbar-bottom toolbar-wrap">
             <li class="toolbar-item">
                 <button type="button" class="toolbar-link text-light" data-toggle="modal" data-target="#ModalRSVP">
@@ -52,7 +52,7 @@
                     LOCATION
                 </button>
             </li>
-    </nav>
+    </div>
     </div>
     <!-- end toolbar bottom -->
 
