--- a/home.html
+++ b/home.html
@@ -32,7 +32,7 @@
         <!--============END TIMER================-->
     </div>
     <!-- toolbar bottom -->
-    <div class="toolbar">
+    <footer class="toolbar">
         <ul class="toolbar-bottom toolbar-wrap">
             <li class="toolbar-item">
                 <button type="button" class="toolbar-link text-light" data-toggle="modal" data-target="#ModalRSVP">
@@ -52,8 +52,8 @@
                     LOCATION
                 </button>
             </li>
-    </div>
-    </div>
+            </div>
+    </footer>
     <!-- end toolbar bottom -->
 
     <!--=========================================START MODAL RSVP==================================================-->
@@ -70,10 +70,10 @@
                 </div>
                 <div class="modal-body">
                     <p class="instruction"><b>Sila jawab kehadiran anda di bawah dan memilih slot masa
-                            kehadiran anda SEBELUM 25 November 2022. <br> </b> </p>
+                            kehadiran anda SEBELUM 1 Disember 2022. <br> </b> </p>
                     <hr>
                     <p class="instruction"><b> Please respond to your presence below and select the slot you
-                            would like to attend BEFORE 25 November 2022.
+                            would like to attend BEFORE 1 December 2022.
                         </b> </p>
                     <hr>
                     <form name="rsvpform" method="post" id="sheetdb-form"
