--- a/home.html
+++ b/home.html
@@ -70,7 +70,7 @@
                 </div>
                 <div class="modal-body">
                     <p class="instruction"><b>Sila jawab kehadiran anda di bawah dan memilih slot masa
-                            kehadiran anda SEBELUM 1 Disember 2022. <br> </b> </p>
+                            kehadiran anda SEBELUM <br> 1 Disember 2022. <br> </b> </p>
                     <hr>
                     <p class="instruction"><b> Please respond to your presence below and select the slot you
                             would like to attend BEFORE 1 December 2022.
