--- a/home.html
+++ b/home.html
@@ -32,7 +32,7 @@
         <!--============END TIMER================-->
     </div>
     <!-- toolbar bottom -->
-    <footer class="toolbar">
+    <div class="toolbar">
         <ul class="toolbar-bottom toolbar-wrap">
             <li class="toolbar-item">
                 <button type="button" class="toolbar-link text-light" data-toggle="modal" data-target="#ModalRSVP">
@@ -52,8 +52,8 @@
                     LOCATION
                 </button>
             </li>
-            </div>
-    </footer>
+        </ul>
+    </div>
     <!-- end toolbar bottom -->
 
     <!--=========================================START MODAL RSVP==================================================-->
@@ -114,7 +114,7 @@
 
                         </div> <br>
                         <div class="text-center">
-                            <button class="btn btn-primary" type="submit">Hantar</button>
+                            <button class="btn btn-primary" type="submit">Hantar 1</button>
                         </div>
                     </form>
                 </div>
