--- a/index.html
+++ b/index.html
@@ -7,19 +7,19 @@
     <meta name="description" content="">
 
     <!-- Facebook Meta Tags -->
-    <meta property="og:url" content="http://aimiaiman.kahwin.me/">
+    <meta property="og:url" content="http://ainaafaheem.kahwin.me/">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Walimatul Urus Ainaa | Faheem ">
     <meta property="og:description" content="">
-    <meta property="og:image" content="http://aimiaiman.kahwin.me/images/covers/girl.png">
+    <meta property="og:image" content="http://ainaafaheem.kahwin.me/images/covers/girl.png">
 
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta property="twitter:domain" content="aimiaiman.kahwin.me">
-    <meta property="twitter:url" content="http://aimiaiman.kahwin.me/">
+    <meta property="twitter:domain" content="ainaafaheem.kahwin.me">
+    <meta property="twitter:url" content="http://ainaafaheem.kahwin.me/">
     <meta name="twitter:title" content="Walimatul Urus Ainaa | Faheem ">
     <meta name="twitter:description" content="">
-    <meta name="twitter:image" content="http://aimiaiman.kahwin.me/images/covers/girl.png">
+    <meta name="twitter:image" content="http://ainaafaheem.kahwin.me/images/covers/girl.png">
 
     <!-- Meta Tags Generated via https://www.opengraph.xyz -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
