--- a/home.html
+++ b/home.html
@@ -114,7 +114,7 @@
 
                         </div> <br>
                         <div class="text-center">
-                            <button class="btn btn-primary" type="submit">Hantar 1</button>
+                            <button class="btn btn-primary" type="submit">Hantar</button>
                         </div>
                     </form>
                 </div>
