--- a/home.html
+++ b/home.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <div class="page-content-scroll">
+    <main class="container">
         <div class="cover-class cover-bg-1">
         </div>
         <div class="cover-class2 cover-bg-2">
@@ -30,31 +30,33 @@
             </div>
         </div>
         <!--============END TIMER================-->
-    </div>
-    <!-- toolbar bottom -->
-    <div class="toolbar">
-        <ul class="toolbar-bottom toolbar-wrap">
-            <li class="toolbar-item">
-                <button type="button" class="toolbar-link text-light" data-toggle="modal" data-target="#ModalRSVP">
-                    <i class="fas fa-envelope-open fa-2x"></i>
-                    RSVP
-                </button>
-            </li>
-            <li class="toolbar-item">
-                <button type="button" class="toolbar-link text-light" data-toggle="modal" data-target="#ModalContact">
-                    <i class="fas fa-phone fa-2x"></i>
-                    CONTACT
-                </button>
-            </li>
-            <li class="toolbar-item">
-                <button type="button" class="toolbar-link text-light" data-toggle="modal" data-target="#ModalMap">
-                    <i class="fas fa-map-marked-alt fa-2x"></i>
-                    LOCATION
-                </button>
-            </li>
-        </ul>
-    </div>
-    <!-- end toolbar bottom -->
+        <!-- toolbar bottom -->
+        <div class="toolbar">
+            <ul class="toolbar-bottom toolbar-wrap">
+                <li class="toolbar-item">
+                    <button type="button" class="toolbar-link text-light" data-toggle="modal" data-target="#ModalRSVP">
+                        <i class="fas fa-envelope-open fa-2x"></i>
+                        RSVP
+                    </button>
+                </li>
+                <li class="toolbar-item">
+                    <button type="button" class="toolbar-link text-light" data-toggle="modal"
+                        data-target="#ModalContact">
+                        <i class="fas fa-phone fa-2x"></i>
+                        CONTACT
+                    </button>
+                </li>
+                <li class="toolbar-item">
+                    <button type="button" class="toolbar-link text-light" data-toggle="modal" data-target="#ModalMap">
+                        <i class="fas fa-map-marked-alt fa-2x"></i>
+                        LOCATION
+                    </button>
+                </li>
+            </ul>
+        </div>
+        <!-- end toolbar bottom -->
+    </main>
+
 
     <!--=========================================START MODAL RSVP==================================================-->
 
