--- a/home.html
+++ b/home.html
@@ -31,7 +31,7 @@
         </div>
         <!--============END TIMER================-->
         <!-- toolbar bottom -->
-        <div class="toolbar">
+        <footer class="toolbar">
             <ul class="toolbar-bottom toolbar-wrap">
                 <li class="toolbar-item">
                     <button type="button" class="toolbar-link text-light" data-toggle="modal" data-target="#ModalRSVP">
@@ -53,7 +53,7 @@
                     </button>
                 </li>
             </ul>
-        </div>
+        </footer>
         <!-- end toolbar bottom -->
     </main>
 
