--- a/home.html
+++ b/home.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <main class="container">
+    <main>
         <div class="cover-class cover-bg-1">
         </div>
         <div class="cover-class2 cover-bg-2">
