--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <meta property="og:url" content="http://ainaafaheem.kahwin.me/">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Walimatul Urus Ainaa | Faheem ">
-    <meta property="og:description" content="">
     <meta property="og:image" content="http://ainaafaheem.kahwin.me/images/covers/girl.png">
 
     <!-- Twitter Meta Tags -->
@@ -32,6 +31,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
     <!--component-css-->
 
 
@@ -267,7 +267,16 @@
     <!--================================END Modal Map===========================================================-->
 
 </body>
-
+<!-- Optional JavaScript -->
+<script src="https://kit.fontawesome.com/a165d3b8d1.js" crossorigin="anonymous"></script>
+<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+    integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+    crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+    integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+    crossorigin="anonymous"></script>
+<script src="home.js"></script>
 <script>
     function play() {
         let audio = new Audio("https://kadkawenainaa.herokuapp.com/ainaa_song.mp3");
