--- a/home.html
+++ b/home.html
@@ -21,7 +21,7 @@
         <!-- ============ START TIMER ================ -->
         <div class="timer-countdown cover-class3">
             <div class="outside">
-                <div class="inside" style="text-align: center;">
+                <div class="inside">
                     <br>
                     <h3></h3>
                     <div class="timer-style" id="timer">
@@ -31,9 +31,6 @@
         </div>
 
     </div>
-
-
-
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
