--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
     integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
     crossorigin="anonymous"></script>
-<script src="home.js"></script>
+<script src="index.js"></script>
 <script>
     function play() {
         let audio = new Audio("https://kadkawenainaa.herokuapp.com/ainaa_song.mp3");
