change heroku to kahwin.me

--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
 <script src="index.js"></script>
 <script>
     function play() {
-        let audio = new Audio("https://kadkawenainaa.herokuapp.com/ainaa_song.mp3");
+        let audio = new Audio("https://ainaafaheem.kahwin.me/ainaa_song.mp3");
         audio.play();
     }
     function hideModal() {
